fix: remove horizontal scroll

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
-#tuatahi-photo {
-  max-width: 20em;
+body {
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
